--- a/pro1.css
+++ b/pro1.css
@@ -46,6 +46,7 @@
     padding-top: 100px;
 }
 
+
 .neon3{
     width: 300px;
     padding-top: 100px;
@@ -131,9 +132,11 @@ li{
 h2{
    
     font-size: 100px;
-    color: #ff7474;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    left: 250px;
+    color: #ff0178;
+    text-shadow: 0 0 2px #34041b;
+    font-family:cursive;
+    top: 300px;
+    left: 300px;
     text-decoration:underline;
    
 }   
@@ -148,8 +151,8 @@ h2{
 }
 #jic{
     position: absolute;
-    top: 230px;
-    left: 250px;
+    top: 700px;
+    left: 300px;
     color: #ffffff;
     font-family:cursive;
     font-style: italic;
@@ -165,26 +168,27 @@ video{
 }
 h3{
     position:absolute;
-    bottom:-450px;
+    bottom:-580px;
     left: 350px;
     font-size: xx-large;
-    color: #ffffff;
+    color: #000000;
     letter-spacing: 3px;
 
 }
+
 #opp{
     position: absolute;
-    bottom:-850px;
-    left: 350px;
-    font-size: x-large;
-    color: #ffffff;
+    bottom:-970px;
+    left: 250px;
+    font-size: xx-large;
+    color: #000000;
     
 }
 #wty{
     position: absolute;
     width: 150px;
     height: 50px;
-    bottom: -700px;
+    bottom: -750px;
     left: 600px;
     border: none;
     border-radius: 30px;
